Final changes and addressed mobile screen capability

--- a/index.html
+++ b/index.html
@@ -36,62 +36,56 @@
             <header>
                 <h2>Top Attractions</h2>
             </header>
-            <div id="slugger-museum">
+            <div id="slugger-museum" class="container">
                 <h3>Louisville Slugger Museum</h3>
                 <p>Home of the famous Louisville Slugger baseball bat, this museum offers a fascinating history of the sport and its most iconic equipment including batting cages and a full museum.</p>
                 <ul>
                     <li>Hours: 9:00 AM - 5:00 PM</li>
                     <li>Admission: $15 adults, $8 children</li>
                 </ul>
-                <!-- Image link -->
-                <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/12/3f/fa/2c/towering-120-ft-the-big.jpg?w=1000&h=-1&s=1" alt="Louisville Slugger Museum" style="max-width:600px; max-height:600px;">
+                <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/12/3f/fa/2c/towering-120-ft-the-big.jpg?w=1000&h=-1&s=1" alt="Louisville Slugger Museum">
             </div>
 
-            <div id="churchill-downs">
+            <div id="churchill-downs" class="container">
                 <h3>Churchill Downs</h3>
                 <p>Famous for hosting the <em>Kentucky Derby</em>, Churchill Downs is a must-visit for horse racing fans.</p>
                 <ul>
                     <li>Hours: 8:00 AM - 5:00 PM</li>
                     <li>Admission: $10 general admission</li>
                 </ul>
-                <!-- Image link -->
-                <img src="https://www.gotolouisville.com/imager/assets_simpleviewinc_com/simpleview/image/upload/c_fit,w_800,h_600/crm/louisville/3619_Churchill-Downs_9141f997-5056-a348-3a3bdf5097f88795_f69c17b56b270deda0220b2ba6b4d051.jpg" alt="Churchill Downs" style="max-width:600px; max-height:600px;">
+                <img src="https://www.gotolouisville.com/imager/assets_simpleviewinc_com/simpleview/image/upload/c_fit,w_800,h_600/crm/louisville/3619_Churchill-Downs_9141f997-5056-a348-3a3bdf5097f88795_f69c17b56b270deda0220b2ba6b4d051.jpg" alt="Churchill Downs">
             </div>
 
-            <div id="waterfront-park">
+            <div id="waterfront-park" class="container">
                 <h3>Waterfront Park</h3>
                 <p>Enjoy the beautiful views of the Ohio River at this public park, perfect for walking, biking, picnics, and first dates.</p>
                 <ul>
                     <li>Hours: Open 24 hours</li>
                     <li>Admission: Free</li>
                 </ul>
-                <!-- Image link -->
-                <img src="https://www.gotolouisville.com/imager/assets_simpleviewinc_com/simpleview/image/upload/c_fit,w_800,h_600/crm/louisville/Waterfront-Park2-8b2665705056a34_8b266693-5056-a348-3a72e3648de1adf9_f69c17b56b270deda0220b2ba6b4d051.jpg" alt="Waterfront Park" style="max-width:600px; max-height:600px;">
+                <img src="https://www.gotolouisville.com/imager/assets_simpleviewinc_com/simpleview/image/upload/c_fit,w_800,h_600/crm/louisville/Waterfront-Park2-8b2665705056a34_8b266693-5056-a348-3a72e3648de1adf9_f69c17b56b270deda0220b2ba6b4d051.jpg" alt="Waterfront Park">
             </div>
 
-            <div id="kentucky-science-center">
+            <div id="kentucky-science-center" class="container">
                 <h3>Kentucky Science Center</h3>
                 <p>A great destination for families, with interactive exhibits that make learning fun.</p>
                 <ul>
                     <li>Hours: 9:30 AM - 5:00 PM</li>
                     <li>Admission: $18 adults, $13 children</li>
                 </ul>
-                <!-- Image link -->
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/07/Kentucky_Science_Center.jpg/220px-Kentucky_Science_Center.jpg" alt="Kentucky Science Center" style="max-width:600px; max-height:600px;">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/07/Kentucky_Science_Center.jpg/220px-Kentucky_Science_Center.jpg" alt="Kentucky Science Center">
             </div>
 
-            <div id="cave-hill-cemetery">
+            <div id="cave-hill-cemetery" class="container">
                 <h3>Cave Hill Cemetery</h3>
                 <p>This historic cemetery is not only a final resting place but also a peaceful park with beautiful landscaping.</p>
                 <ul>
                     <li>Hours: 8:00 AM - 4:45 PM</li>
                     <li>Admission: Free</li>
                 </ul>
-                <!-- Image link -->
-                <img src="https://www.nps.gov/common/uploads/cropped_image/primary/AC8F2541-0F00-71DB-705A4DB553AA0D33.jpg?width=1600&quality=90&mode=crop" alt="Cave Hill Cemetery" style="max-width:600px; max-height:600px;">
+                <img src="https://www.nps.gov/common/uploads/cropped_image/primary/AC8F2541-0F00-71DB-705A4DB553AA0D33.jpg?width=1600&quality=90&mode=crop" alt="Cave Hill Cemetery">
             </div>
 
-            <!-- External link -->
             <p>Learn more about the history and attractions of Louisville by visiting <a href="https://www.tripadvisor.com/Attractions-g39604-Activities-Louisville_Kentucky.html" target="_blank">this website</a>.</p>
         </section>
 
@@ -120,14 +114,12 @@
                 </fieldset>
             </form>
 
-            <!-- Embedded map -->
-            <div>
+            <div class="container">
                 <h3>Explore Louisville on the Map</h3>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d401398.79647500376!2d-86.00638983915913!3d38.18834426411347!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88690b1ab35bd511%3A0xd4d3b4282071fd32!2sLouisville%2C%20KY!5e0!3m2!1sen!2sus!4v1725395778676!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d401398.79647500376!2d-86.00638983915913!3d38.18834426411347!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88690b1ab35bd511%3A0xd4d3b4282071fd32!2sLouisville%2C%20KY!5e0!3m2!1sen!2sus!4v1725395778676!5m2!1sen!2sus" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
-            <!-- Fact table -->
-            <div>
+            <div class="container">
                 <h3>Louisville Quick Facts</h3>
                 <table>
                     <thead>
@@ -161,4 +153,3 @@
 
 </body>
 </html>
-
